traefik/manifest/https_traefik.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect_80
spec:
  redirectScheme:
    scheme: https
    permanent: true
