traefik/manifest/middlewares.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: basicauth-middleware
spec:
  basicAuth:
    secret: authsecret
    removeHeader: false

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ipwhitelist
spec:
  ipWhiteList:
    sourceRange:
      - 88.166.162.96
---
# apiVersion: traefik.io/v1alpha1
# kind: Middleware
# metadata:
#   name: redirect_80
# spec:
#   redirectScheme:
#     scheme: https
#     permanent: true
