traefik/manifest/services.yml
apiVersion: v1
kind: Service
metadata:
  name: clustvoteapp
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: voteapplb

---
apiVersion: v1
kind: Service
metadata:
  name: clustredis
spec:
  type: ClusterIP
  ports:
  - port: 6379
  selector:
    app: redislb

---
apiVersion: v1
kind: Service
metadata:
  name: clustvoteapptls
spec:
  type: ClusterIP
  ports:
  - port: 443
  selector:
    app: voteapplb
